fix hamburger menu z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,7 +95,7 @@ html {
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  opacity: 0.7;
+  opacity: 0.8;
   background: black;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
@@ -103,12 +103,15 @@ html {
   transform: translate( 0,-100%);
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  z-index: 1;
 }
 
 #hamburgerMenu li
 {
   padding: 10px 0;
   font-size: 22px;
+  font-weight: bold;
+  color: white;
 }
 
 #hamburgerMenuToggle input:checked ~ ul
@@ -141,7 +144,8 @@ html {
     width: auto;
     margin-left: auto;
     margin-right: auto;
-    animation: bounceIn 5s ;  
+    animation: bounceIn 5s ;
+    z-index: -1;  
 }
 
 #frame{
